--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - ~/.config/jenkins_jobs:/root/.config/jenkins_jobs:z
       - ~/Dev/Panda3D:/root/Dev/Panda3D:z
       - ~/Games/Steam/steamapps/common/Blender:/root/Blender:z
+      - ~/Public:/root/Public:z
     environment:
       PATH: '$PATH:/app/.venv/bin'
     command: bash -c "mkdir /run/sshd && /usr/sbin/sshd -D"
