update realsense and python

--- a/jobs/python.yml
+++ b/jobs/python.yml
@@ -1,6 +1,6 @@
 - job-template:
-    name: python{variant}-lynx64
-    display-name: python-lynx64
+    name: 'python{variant}-lynx64'
+    display-name: 'python{variant}-lynx64'
     project-type: freestyle
     description: The Python programming language.
     node: linux
@@ -31,8 +31,8 @@
             patchelf --set-rpath \$ORIGIN/../lib {install}/bin/python{python_version}
 
 - job-template:
-    name: python{variant}-winx64
-    display-name: python-winx64
+    name: 'python{variant}-winx64'
+    display-name: 'python{variant}-winx64'
     project-type: freestyle
     description: The Python programming language.
     node: windows
@@ -70,21 +70,21 @@
 - project:
     name: python
     jobs:
-        - 'python-lynx64':
-            build: /app/build/python
-            git_tag: 'v3.13.0b4'
-            install: /app/opt/python
-            python_version: '3.13t'
-            variant: ''
-        - 'pythonnt-lynx64':
+        - 'python{variant}-lynx64':
             build: /app/build/pythonnt
-            git_tag: 'v3.12'
+            git_tag: 'v3.12.4'
             install: /app/opt/pythonnt
             python_version: '3.12'
             variant: 'nt'
-        - 'python-winx64':
-            build: 'C:\build\python'
-            git_tag: 'v3.13.0b4'
-            install: 'C:\opt\python'
+        - 'python{variant}-lynx64':
+            build: /app/build/python
+            git_tag: 'v3.13.0rc1'
+            install: /app/opt/python
+            python_version: '3.13t'
+            variant: ''
+        - 'python{variant}-winx64':
+            build: 'C:\\build\\python'
+            git_tag: 'v3.13.0rc1'
+            install: 'C:\\opt\\python'
             python_version: '3.13t'
             variant: ''
